--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <h4>ctrl+i = belgilangan so'zni egib qo'yadi (italik)</h4>
     <h4>ctrl+f = qidirish uchun</h4>
     <h4>ctrl+h = almashtirish uchun</h4>
+    <hr />
+    <h2>O'zim haqimda ma'lumot.</h2>
+    <a href="CV.html">Shu yerni bosing.</a>
     </p>
   </body>
 </html>
