--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h4>ctrl+h = almashtirish uchun</h4>
     <hr />
     <h2>O'zim haqimda ma'lumot.</h2>
-    <a href="CV.html">Shu yerni bosing.</a>
+    <a href="cv.html">Shu yerni bosing.</a>
     </p>
   </body>
 </html>
