--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <hr />
     <h2>O'zim haqimda ma'lumot.</h2>
     <a href="cv.html">Shu yerni bosing.</a>
+    <a href="https://t.me/Ergashbek2004">Telegram.</a>
     </p>
   </body>
 </html>
