--- a/cv.html
+++ b/cv.html
@@ -29,5 +29,6 @@
     <hr />
     <h3>Aloqa uchun.</h3>
     <a href="tel:+998998703298">Murojaat uchun telefon.</a>
+    <a href="https://t.me/Ergashbek2004">Telegram.</a>
   </body>
 </html>
