--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Baxtiyorov Ergashbek</h1>
-    <img src="image/Ergashbek.jpg" />
+    <img src="image/Ergashbek.jpg" width="350" />
     <hr />
     <h2>Tug'ilgan sana: <i>03.03.2004</i></h2>
     <h2>Tug'lgan joy: <i>Toshkent</i></h2>
