--- a/cv.html
+++ b/cv.html
@@ -22,9 +22,9 @@
     </ol>
     <h2>Biladigan tillarim:</h2>
     <ol>
-      <li>1. Python</li>
-      <li>2. C++</li>
-      <li>3. C</li>
+      <li>Python</li>
+      <li>C++</li>
+      <li>C</li>
     </ol>
     <hr />
     <h3>Aloqa uchun.</h3>
